--- a/Code/UI/Hint.razor
+++ b/Code/UI/Hint.razor
@@ -5,19 +5,13 @@
 @namespace Sandbox
 
 <root class="@(isVisible ? "" : "hidden")">
-	<div class="title">@text</div>
+	<div class="title">#hint</div>
 </root>
 
 @code
 {
 	public bool isVisible = true;
 	float timer = 0;
-	public string text;
-
-	protected override void OnEnabled()
-	{
-		text = "Press Tab to open the menu";
-	}
 
 	protected override void OnUpdate()
 	{
@@ -30,5 +24,5 @@
 	/// <summary>
 	/// the hash determines if the system should be rebuilt. If it changes, it will be rebuilt
 	/// </summary>
-	protected override int BuildHash() => System.HashCode.Combine( isVisible, text );
+	protected override int BuildHash() => System.HashCode.Combine( isVisible );
 }
