--- a/Code/UI/LobbyMenu.razor.scss
+++ b/Code/UI/LobbyMenu.razor.scss
@@ -99,6 +99,12 @@ LobbyMenu
 			align-items: center;
 			flex-direction: row;
 			margin: 5px 0px 10px 0px;
+			gap: 5px;
+		}
+
+		.gamemode
+		{
+			gap: 5px;
 		}
 	}
 }
